Revision history for perl module Remedi

{{$NEXT}}

0.055     2014-11-28 21:50:34+01:00 Europe/Berlin

    - SRU Errors are captured with a error message

0.054     2014-06-29 16:26:54+02:00 Europe/Berlin

    - log level set for Remedi affects now the creation of the footer too   

0.053     2014-06-28 16:26:56+02:00 Europe/Berlin

    - broken logo files for grayscale images are fixed
    - logo for Johannes-Turmair-Gymnasium is added
    - Thumbd.db files are excluded from file lists

0.052     2014-05-29 12:42:14+02:00 Europe/Berlin

    - one temporary directory instead of one for each image file

0.051     2014-05-20 21:11:09+02:00 Europe/Berlin
    
    - titel string can have a maximum length of 512 characters
    
0.050     2014-05-18 12:38:32+02:00 Europe/Berlin

    - completeley revised version    

0.04   Sat Jun 10 15:54:40 2012


0.0.1  Sat Nov 15 13:42:02 2008

    - Initial release.
