@@ -50,6 +50,8 @@ extra_scanners = MooseXTypesCombine
 ; authordep Perl::PrereqScanner::Scanner::MooseXTypesCombine
 ; authordep Pod::Weaver::Section::Contributors
 ; authordep Test::LWP::MockSocket::http
+; authordep Data::Printer
+; authordep Test::DescribeMe
 
 ; build system
 [ExtraTests]
